#if(TORQUE_SFX_OPENAL AND NOT TORQUE_DEDICATED)
    project(libogg)
    file(GLOB LIBOGG_SOURCE_FILES "src/*.c")
    file(GLOB LIBOGG_HEADER_FILES "include/ogg/*.h")
    set(LIBOGG_FILES ${LIBOGG_SOURCE_FILES} ${LIBOGG_HEADER_FILES}) 
    add_library(libogg ${LIBOGG_FILES})
    set_target_properties(libogg PROPERTIES LINKER_LANGUAGE CXX)
    target_include_directories(libogg PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
#endif()