file(GLOB LIBTHEORA_SOURCE_FILES "lib/*.c")

set(LIBTHEORA_COMPILE_DEFINES "")
if (WIN32 AND TORQUE_CPU_X32)
	file(GLOB LIBTHEORA_SOURCE_FILES_X86_VC "lib/x86_vc/*.c")
	set(LIBTHEORA_SOURCE_FILES ${LIBTHEORA_SOURCE_FILES} ${LIBTHEORA_SOURCE_FILES_X86_VC})
	set(LIBTHEORA_COMPILE_DEFINES ${LIBTHEORA_COMPILE_DEFINES} OC_X86_ASM) 
elseif (TORQUE_CPU_X32)
	file(GLOB LIBTHEORA_SOURCE_FILES_X86_VC "lib/x86/*.c")
	set(LIBTHEORA_SOURCE_FILES ${LIBTHEORA_SOURCE_FILES} ${LIBTHEORA_SOURCE_FILES_X86_VC})
	set(LIBTHEORA_COMPILE_DEFINES ${LIBTHEORA_COMPILE_DEFINES} OC_X86_ASM) 
endif (WIN32 AND TORQUE_CPU_X32)

add_library(libtheora ${LIBTHEORA_SOURCE_FILES})
target_include_directories(libtheora PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
target_link_libraries(libtheora PUBLIC libogg)
target_compile_definitions(libtheora PUBLIC ${LIBTHEORA_COMPILE_DEFINES})